# code_coverage

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  coverage.yml  tests.yml
include/: resource.hpp
src/: main.cpp  resource.cpp
tests/: CMakeLists.txt  test_resource.cpp
